Bug 527834 - gloda indexes junk in IMAP accounts even though it shouldn't. r+sr=bienvenu, a=blocking-thunderbird3.